# fs-fastapi-celery

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 12fee8f067f5_.py  84a7daa8142d_.py  c62c34b2b9c2_.py
compose/local/fastapi/: Dockerfile
compose/local/fastapi/celery/worker/: start
project/: __init__.py  celery_utils.py  config.py  database.py
project/tdd/: __init__.py  factories.py  models.py  tasks.py  views.py
project/users/: __init__.py  schemas.py  tasks.py  views.py
project/users/templates/: form.html  form_socketio.html  form_ws.html
project/ws/: __init__.py  views.py
tests/: conftest.py
tests/tdd/: test_models.py  test_tasks.py  test_views.py
tests/users/: test_tasks.py  test_views.py
