[tool.poetry]
name = "fs-fastapi-celery"
version = "0.1.0"
description = "Use case of Celery in FastAPI application to provide asynchronous task processing"
authors = ["sanggusti <gustiowinata0@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
celery = "^5.1.2"
redis = "^3.5.3"
flower = "1.0.0"
alembic = "1.6.5"
SQLAlchemy = "1.4.20"
psycopg2-binary = "2.9.1"
watchgod = "0.7"
Jinja2 = "3.0.1"
requests = "2.25.1"
asgiref = "3.4.1"
asyncio-redis = "0.16.0"
broadcaster = "0.2.0"
aioredis = "1.3.1"
python-socketio = "5.3.0"
pytest = "6.2.4"
factory-boy = "3.2.0"
pytest-factoryboy = "2.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
